--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -15,18 +15,20 @@
 .btn-primary, .btn-success {
     background-color: #000;
     border-color: #000;
-    &:hover, &:focus, &:active {
+    &:hover, &:focus, &:active, &:active:focus {
         background-color: lighten(#000, 20%);
         border-color: lighten(#000, 20%);
+        outline: none;
     }
 }
 
 .btn-danger {
     background-color: $danger;
     border-color: $danger;
-    &:hover, &:focus, &:active {
+    &:hover, &:focus, &:active, &:active:focus {
         background: lighten($danger,5%)!important;
         border-color: lighten($danger,5%)!important;
+        outline: none;
     }
 }
 
