--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -185,7 +185,7 @@ textarea {
 
 @media only screen and (min-width: 95em) {
 	.sonata-ba-form .sonata-ba-form-actions.well {
-		left: 315px;
+		left: $nav-width;
 	}
 }
 
