--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -7,54 +7,115 @@
 @import 'tabs';
 @import 'alert';
 @import 'table';
-@import 'article';
 @import 'pagination';
 @import 'login';
 @import 'miscplugins';
-
 html {
     -webkit-font-smoothing: antialiased;
     word-break: break-all;
 }
-html, body {
+
+html,
+body {
     font-size: 100%;
     color: #000;
 }
+
 body {
     font-size: 87.5%;
 }
-body, .content-wrapper, .right-side, .wrapper {
+
+body,
+.content-wrapper,
+.right-side,
+.wrapper {
     background-color: #ebebeb;
 }
-.skin-just  {
+
+a,
+button {
+    transition: color 0.1s, background-color 0.1s;
+}
+
+.skin-just {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif!important;
-    .wrapper{
+    .wrapper {
         background: #ebebeb;
     }
-    .sidebar-form{
+    .sidebar-form {
         border: 1px solid #656565;
     }
-
     // Hide profile menu if loggedin user is an external user
     &.skin-just-external-login .user-footer div:first-child {
         display: none;
     }
 }
-.bg-aqua { background-color: #000!important; }
-.required:after { color: $danger; font-size: 1.3em; line-height: 0; }
 
-.logo img { display: none; }
-.content-wrapper {     
+.bg-aqua {
+    background-color: #000!important;
+}
+
+.required:after {
+    color: $danger;
+    font-size: 1.3em;
+    line-height: 0;
+}
+
+.logo img {
+    display: none;
+}
+
+.content-wrapper {
     .content-header {
-        .nav.navbar-right.btn-group { display: none; }
+        padding: 15px 16px 0 16px;
+        .nav.navbar-right.btn-group {
+            display: none;
+        }
     }
 }
-.accesibility{
+.content-wrapper,
+.right-side {
+    background-color: #EBEBEB;
+}
+
+.container-fluid {
+    display: block;
+}
+
+.container-fluid:before,
+.container-fluid:after,
+.form-group:before,
+.form-group:after {
+    content: " ";
+    display: table;
+}
+.container-fluid:after {
+    clear: both;
+}
+
+//unstick titel container on article detail
+body.fixed .content-header .navbar {
+    width: auto !important;
+    &.stuck {
+        border-radius: 0;
+        margin-left: 0;
+        position: relative;
+        top: auto;
+        width: auto !important;
+        z-index: 1;
+    }
+}
+
+body.fixed .content-header>.sticky-wrapper {
+    height: auto !important;
+}
+
+.accesibility {
     position: absolute;
     left: -100px;
     visibility: hidden;
     opacity: 0;
-    z-index: -1;    
+    z-index: -1;
 }
 
 @media screen and (min-width: 50em) {
@@ -62,9 +123,12 @@ body, .content-wrapper, .right-side, .wrapper {
         padding-right: 50px;
     }
 }
+
 @media screen and (min-width: 80em) {
-    .content, .content-header { 
+    .content,
+    .content-header {
         max-width: 1024px;
-        margin: auto; 
+        margin-left: auto;
+        margin-right: auto;
     }
 }
