Chore: typo accessibility changed.

--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -114,7 +114,7 @@ body.fixed .content-header>.sticky-wrapper {
     height: auto !important;
 }
 
-.accesibility {
+.accessibility {
     position: absolute;
     left: -100px;
     visibility: hidden;
