--- a/Resources/views/standard_layout.html.twig
+++ b/Resources/views/standard_layout.html.twig
@@ -10,7 +10,7 @@
         </li>
         <li>
             <a href="">
-                <span class="accesibility">Log out</span>
+                <span class="accessibility">Log out</span>
             </a>
         </li>
     </ul>
