--- a/Resources/public/scss/_login.scss
+++ b/Resources/public/scss/_login.scss
@@ -1,5 +1,11 @@
+.login-page,
+.register-page {
+	background-color: #ebebeb !important;
+}
+
 .login-box,
 .register-box {
+	margin-top: 30vh;
 	max-width: 400px;
 	width: 100%;
 }
@@ -25,9 +31,9 @@
 	.form-group {
 		padding: 0;
 	}
-	.form-group+.row>.col-xs-8,
-	.form-group+.row>.col-xs-4,
-	.form-group+.row>.col-xs-4 button {
+	.form-group + .row > .col-xs-8,
+	.form-group + .row > .col-xs-4,
+	.form-group + .row > .col-xs-4 button {
 		float: none;
 		width: 100%;
 	}
