--- a/Resources/public/scss/_pagination.scss
+++ b/Resources/public/scss/_pagination.scss
@@ -2,6 +2,7 @@
 .pagination > li > span {
 	background-color: transparent;
 	border: 0;
+	font-size: 0.875em;
 	padding: 0.8em 1.05em;
 	line-height: 1;
 }
