--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -8,6 +8,13 @@
         display: none;
     }
 }
+.add_records {
+    margin-top: 3em; 
+}
+.add_records .sonata-action-element {
+    border-radius: 0;
+    padding: .8em 1.1em;
+}
 
 .delete_link { font-size: 0; }
 
@@ -15,12 +22,15 @@
     display: block;
 }
 
-.btn-primary, .btn-success {
-    background-color: #000;
-    border-color: #000;
+.btn-primary,
+.btn-success,
+.add_records .sonata-action-element {
+    color: #fff !important;
+    background-color: #000 !important;
+    border-color: #000 !important;
     &:hover, &:focus, &:active, &:active:focus {
-        background-color: lighten(#000, 20%);
-        border-color: lighten(#000, 20%);
+        background-color: lighten(#000, 20%) !important;
+        border-color: lighten(#000, 20%) !important;
         outline: none;
     }
 }
