--- a/Resources/public/scss/_tabs.scss
+++ b/Resources/public/scss/_tabs.scss
@@ -14,6 +14,7 @@
 .nav-tabs-custom > .tab-content {
     padding: 0;
     background: #F2F2F2;
+    padding-bottom: 3em;
 }
 
 .nav-tabs-custom > .nav-tabs > li.active {
