--- a/Resources/public/scss/_variables.scss
+++ b/Resources/public/scss/_variables.scss
@@ -2,4 +2,7 @@ $primary-color: #222;
 $success: #5cb85c;
 $danger: #900;
 $warning: #f0ad4e;
+$gray: #dadada;
+$light-gray: #ebebeb;
+$lighter-gray: #f2f2f2;
 $nav-width: 315px;
