--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -1,9 +1,9 @@
 .box {
-    border: 1px solid #ebebeb;
+    border: 1px solid $light-gray;
     box-shadow: none;
     border-radius: 0;
     &.box-primary {
-        border-top-color: #ebebeb;
+        border-top-color: $light-gray;
     }
 }
 
@@ -27,7 +27,7 @@
 
 .sonata-ba-form {
     .box {
-        background-color: #F2F2F2;
+        background-color: $lighter-gray;
     }
     .box-body {
         margin: 0;
@@ -58,7 +58,7 @@
 }
 
 .info-box-content {
-    background: #f2f2f2;
+    background: $lighter-gray;
     margin-left: 0;
     padding: 1.2em 1.5em;
 }
@@ -69,7 +69,7 @@
 
 .info-box-text {
     font-size: 1.2em;
-    border-bottom: 1px solid #dedede;
+    border-bottom: 1px solid $gray;
     padding: 0 0 0.4em 0;
 }
 
