--- a/Resources/public/scss/_login.scss
+++ b/Resources/public/scss/_login.scss
@@ -4,6 +4,11 @@
 	width: 100%;
 }
 
+.login-page,
+.register-page {
+	background-color: $light-gray;
+}
+
 .login-box {
 	.login-box-body {
 		background-color: transparent;
