--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -31,7 +31,7 @@ body,
 .content-wrapper,
 .right-side,
 .wrapper {
-    background-color: #ebebeb;
+    background-color: $light-gray;
 }
 
 a,
@@ -42,7 +42,7 @@ button {
 .skin-just {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif!important;
     .wrapper {
-        background: #ebebeb;
+        background: $light-gray;
     }
     .sidebar-form {
         border: 1px solid #656565;
@@ -78,7 +78,7 @@ button {
 
 .content-wrapper,
 .right-side {
-    background-color: #EBEBEB;
+    background-color: $light-gray;
 }
 
 .container-fluid {
