--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -14,6 +14,10 @@
     background-color: $light-gray;
 }
 
+.skin-just .main-header li.user-header {
+    background-color: #fff !important;
+}
+
 .skin-just .main-header>.logo,
 .skin-just .main-header>.logo:hover {
     background-color: #000000;
