--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -63,12 +63,9 @@ td.sonata-ba-list-field.sonata-ba-list-field-integer {
 }
 
 .table-striped>tbody>tr:nth-of-type(odd) {
-<<<<<<< HEAD
     background-color: $lighter-gray;
-=======
-    background-color: #f2f2f2;
      &:hover, &:focus, &:active {
-        background-color: #ddd;
+        background-color: $gray;
     }
 }
 
@@ -76,9 +73,8 @@ td.sonata-ba-list-field.sonata-ba-list-field-integer {
     cursor: pointer;
     transition: background-color 0.1s;
     &:hover, &:focus, &:active {
-        background-color: #ddd;
+        background-color: $gray;
     }
->>>>>>> develop
 }
 
 .table-striped tbody tr.sonata-ba-list-row-selected td,
