--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -100,7 +100,7 @@ body.fixed .content-header .navbar {
         border-radius: 0;
         margin-left: 0;
         position: relative;
-        top: auto;
+        top: 1px;
         width: auto !important;
         z-index: 1;
     }
