--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -39,7 +39,7 @@ button {
     transition: color 0.1s, background-color 0.1s;
 }
 
-.skin-just {
+.skin-black {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif!important;
     .wrapper {
         background: $light-gray;
