--- a/Resources/public/scss/_login.scss
+++ b/Resources/public/scss/_login.scss
@@ -20,9 +20,23 @@
 		background-color: transparent;
 	}
 	.login-box-msg,
-	.form-control-feedback,
-	.login-logo {
+	.form-control-feedback {
 		display: none;
+	}
+	.login-logo {
+		margin: 0 auto;
+		font-weight: bold;
+		a {
+			display: none;
+		}
+		&:before {
+			content:'content';
+			display: block;
+			text-transform: uppercase;
+			text-align: left;
+			margin: 0 0.8em;
+			font-size: 1.3em;
+		}
 	}
 	input,
 	button {
