--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -25,6 +25,7 @@ body {
 
 body {
     font-size: 87.5%;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body,
@@ -40,7 +41,6 @@ button {
 }
 
 .skin-black {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif!important;
     .wrapper {
         background: $light-gray;
     }
