--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -83,3 +83,13 @@
         background-color: lighten($primary-color, 10%);
     }
 }
+
+.box-footer .form-inline {
+    .pull-left {
+        opacity: 0;
+        transition: 0.25s ease-in-out;
+    }
+    &.is-visible .pull-left {
+        opacity: 1;
+    }
+}
