Feature: Add bg color to sortable

--- a/Resources/public/scss/_miscplugins.scss
+++ b/Resources/public/scss/_miscplugins.scss
@@ -1,3 +1,21 @@
+.ui-sortable-helper {
+	background-color: #bfbfbf!important;
+	td {
+		border: 0;
+	}
+}
+
+
+
+.ui-sortable-placeholder {
+	visibility: visible!important;
+	background-color: #333!important;
+	td{
+		padding: 35px 12px!important;
+	}
+} 
+
+
 .datepicker td,
 .datepicker th,
 .datepicker table tr td span {
