Refactor: Polish drag & drop style

--- a/Resources/public/scss/_miscplugins.scss
+++ b/Resources/public/scss/_miscplugins.scss
@@ -1,5 +1,6 @@
 .ui-sortable-helper {
 	background-color: #bfbfbf!important;
+	box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
 	td {
 		border: 0;
 	}
@@ -9,7 +10,7 @@
 
 .ui-sortable-placeholder {
 	visibility: visible!important;
-	background-color: #333!important;
+	background-color: #777!important;
 	td{
 		padding: 35px 12px!important;
 	}
