--- a/Resources/public/scss/_alert.scss
+++ b/Resources/public/scss/_alert.scss
@@ -1,10 +1,20 @@
 .alert {
-    &:before{
-        display: inline-block;
-        font-family: "FontAwesome";
-        font-size: inherit;
-        text-rendering: auto;
-        -webkit-font-smoothing: antialiased;
-        content: "\f00c";
-    }
+	border-radius: 0;
+}
+
+.alert .close {
+	text-indent: -999em;
+	opacity: 1;
+}
+
+.bg-green,
+.callout.callout-success,
+.alert-success,
+.label-success,
+.modal-success .modal-body {
+	background-color: $success !important;
+}
+
+.alert-success {
+	border-color: $success !important;
 }
