Bugfix: checkbox background image.

--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -27,6 +27,7 @@ body {
 body {
     font-size: 87.5%;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding-bottom: 5em;
 }
 
 body,
