--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -79,7 +79,7 @@ textarea {
 		bottom: 0;
 		left: 230px;
 		right: 0;
-		z-index: 5;
+		z-index: 100;
 		font-size: 0;
 		margin: 0;
 		padding: 6px;
@@ -97,7 +97,7 @@ textarea {
 .icheckbox_square-blue,
 .iradio_square-blue {
 	transform: scale(0.7);
-	background: url('../images/black.png');
+	background-image: url('../images/black.png');
 }
 
 .form-logout {
