Feature: hide edit link.

--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -94,6 +94,10 @@ textarea {
 	display: none !important;
 }
 
+.sonata-ba-list-field-text .edit_link {
+	display: none;
+}
+
 .icheckbox_square-blue,
 .iradio_square-blue {
 	transform: scale(0.7);
