Feature: updated styling on page before deleting something.

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -12,12 +12,39 @@
 }
 
 .box-footer {
+    border-top-color: transparent;
     padding: 1.375em 2.375em;
 }
 
 .box-footer .form-inline {
     .btn-group.open {
         position: relative;
+    }
+}
+
+.sonata-ba-delete {
+    .box-danger {
+        border-top-color: transparent;
+        .box-header {
+            display: block;
+            padding: 0.75em 2.375em;
+        }
+        .box-title {
+            font-size: 24px; 
+        }
+        .box-body {
+            padding: 0 2.375em 0.75em;
+        }
+        .box-footer {
+            padding: 0 2.375em 2.375em
+        }
+        form {
+            font-size: 0;
+            margin: 0 -2em;
+        }
+        .btn {
+            margin: 0.5em 1em 0 0;
+        }
     }
 }
 
