--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -26,8 +26,11 @@ body {
 
 body {
     font-size: 87.5%;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     padding-bottom: 5em;
+}
+
+body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body,
