Bugfix: text color hover redactor menu items.

--- a/Resources/public/scss/_miscplugins.scss
+++ b/Resources/public/scss/_miscplugins.scss
@@ -168,4 +168,5 @@ a.editable-click:hover {
 
 .redactor-toolbar li a:hover {
 	background-color: $light-gray !important;
+	color: #444!important;
 }
