Bugfix: padding bottom in sonata form box.

--- a/Resources/public/scss/_icons_overrides.scss
+++ b/Resources/public/scss/_icons_overrides.scss
@@ -1,4 +1,4 @@
-.add_records .fa-plus-circle:before,
+.fa-plus-circle:before,
 .delete_link i:before,
 .fa-home:before,
 .fa-user:before,
@@ -25,7 +25,7 @@
     vertical-align: middle;
 }
 
-.add_records .fa-plus-circle:before {
+.fa-plus-circle:before {
     background-image: url('../images/icons/ic_add_white.svg');
     margin-right: 0.5em;
     vertical-align: -0.25em;
