--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -55,6 +55,7 @@
 .sonata-ba-form {
     .box {
         background-color: $lighter-gray;
+        padding-bottom: 3em;
     }
     .box-body {
         margin: 0;
