Refactor: Max width on images on detail form

--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -143,6 +143,10 @@ textarea {
 	}
 }
 
+.vich-image img {
+	max-width: 100%;
+}
+
 @media only screen and (min-width: 50em) {
 	.sonata-ba-form-actions {
 		.btn-danger {
