Bugfix: unwanted margin on sortable move button.

--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -55,7 +55,7 @@
 .js-sortable-move {
     background-color: transparent;
     border-radius: 4px;
-    margin: 0.5em 1em 0.5em 1em !important;
+    margin: 0;
     padding: 5px;
     cursor: move;
     display: inline-block;
