Chore: navbar collapse temp enabled.

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -3,7 +3,7 @@
     box-shadow: none;
     border-radius: 0;
     &.box-primary {
-        border-top-color: $light-gray;
+        border-top-color: transparent;
     }
 }
 
