--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -122,9 +122,9 @@
 	}
 }
 
-.navbar-header+.navbar-collapse {
-	display: none;
-}
+// .navbar-header+.navbar-collapse {
+// 	display: none;
+// }
 
 .navbar-header {
 	padding: 1em;
