--- a/Resources/views/standard_layout.html.twig
+++ b/Resources/views/standard_layout.html.twig
@@ -1,48 +1,55 @@
 {% extends 'SonataAdminBundle::standard_layout.html.twig' %}
+    
+    {% block javascripts %}
+        {{ parent() }}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    {% endblock javascripts %}
 
-{% block side_bar_after_nav %}{% endblock %}
+    {% block body_attributes %}class="sonata-bc skin-black fixed"{% endblock %}
 
-{% block sonata_page_content_nav %}
-    {% if _tab_menu is not empty or _actions is not empty or _list_filters_actions is not empty %}
-        <nav class="navbar navbar-default" role="navigation">
-            <div class="container-fluid">
-                {% block tab_menu_navbar_header %}
-                    {% if _navbar_title is not empty %}
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="#">{{ _navbar_title|raw }}</a>
-                        </div>
-                    {% endif %}
-                {% endblock %}
+    {% block side_bar_after_nav %}{% endblock %}
 
-                <div class="navbar-collapse">
-                    {% if _tab_menu is not empty %}
-                        <div class="navbar-left">
-                            {{ _tab_menu|raw }}
-                        </div>
-                    {% endif %}
-
-                    {% block sonata_admin_content_actions_wrappers %}
-                        {% if _actions|replace({ '<li>': '', '</li>': '' })|trim is not empty %}
-                            <ul class="nav navbar-nav navbar-right add_records">
-                            {% if _actions|split('</a>')|length > 2 %}
-                                <li class="dropdown sonata-actions">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ 'link_actions'|trans({}, 'SonataAdminBundle') }} <b class="caret"></b></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        {{ _actions|raw }}
-                                    </ul>
-                                </li>
-                            {% else %}
-                                {{ _actions|raw }}
-                            {% endif %}
-                            </ul>
+    {% block sonata_page_content_nav %}
+        {% if _tab_menu is not empty or _actions is not empty or _list_filters_actions is not empty %}
+            <nav class="navbar navbar-default {% if _tab_menu is not empty %} has_tabs {% endif %}" role="navigation">
+                <div class="container-fluid">
+                    {% block tab_menu_navbar_header %}
+                        {% if _navbar_title is not empty %}
+                            <div class="navbar-header">
+                                <a class="navbar-brand" href="#">{{ _navbar_title|raw }}</a>
+                            </div>
                         {% endif %}
-                    {% endblock sonata_admin_content_actions_wrappers %}
+                    {% endblock %}
 
-                    {% if _list_filters_actions is not empty %}
-                        {{ _list_filters_actions|raw }}
-                    {% endif %}
+                    <div class="navbar-collapse">
+                        {% if _tab_menu is not empty %}
+                            <div class="navbar-left">
+                                {{ _tab_menu|raw }}
+                            </div>
+                        {% endif %}
+
+                        {% block sonata_admin_content_actions_wrappers %}
+                            {% if _actions|replace({ '<li>': '', '</li>': '' })|trim is not empty %}
+                                <ul class="nav navbar-nav navbar-right add_records">
+                                {% if _actions|split('</a>')|length > 2 %}
+                                    <li class="dropdown sonata-actions">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ 'link_actions'|trans({}, 'SonataAdminBundle') }} <b class="caret"></b></a>
+                                        <ul class="dropdown-menu" role="menu">
+                                            {{ _actions|raw }}
+                                        </ul>
+                                    </li>
+                                {% else %}
+                                    {{ _actions|raw }}
+                                {% endif %}
+                                </ul>
+                            {% endif %}
+                        {% endblock sonata_admin_content_actions_wrappers %}
+
+                        {% if _list_filters_actions is not empty %}
+                            {{ _list_filters_actions|raw }}
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
-        </nav>
-    {% endif %}
-{% endblock sonata_page_content_nav %}
+            </nav>
+        {% endif %}
+    {% endblock sonata_page_content_nav %}
