--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -77,7 +77,7 @@ textarea {
 		border-radius: 0;
 		position: fixed;
 		bottom: 0;
-		left: 230px;
+		left: 0;
 		right: 0;
 		z-index: 100;
 		font-size: 0;
@@ -182,6 +182,12 @@ textarea {
 			opacity: 0.6;
 			pointer-events: initial;
 		}
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.sonata-ba-form .sonata-ba-form-actions.well {
+		left: 230px;
 	}
 }
 
