--- a/Resources/public/scss/_icons_overrides.scss
+++ b/Resources/public/scss/_icons_overrides.scss
@@ -68,9 +68,12 @@
 	font-size: 0;
 	&:before {
 		background-image: url('../images/icons/ic_close.svg');
+		opacity: 0.4;
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		transform: translate3D(-50%, -50%, 0)
+		transform: translate3D(-50%, -50%, 0);
+		width: 12px;
+		height: 12px;
 	}
 }
