--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -17,6 +17,7 @@
 .add_records .sonata-action-element {
     border-radius: 0;
     padding: .8em 1.1em;
+    font-weight: bold;
 }
 
 .has_tabs .add_records {
