--- a/Resources/public/scss/_miscplugins.scss
+++ b/Resources/public/scss/_miscplugins.scss
@@ -110,13 +110,20 @@
 
 .select2-container .select2-choice,
 select {
-	height: 45px;
+	height: 44px;
 }
 
 .select2-choice>span:first-child,
 .select2-chosen,
 .select2-container .select2-choices .select2-search-field input {
 	padding: 0.75em 1em;
+}
+
+.select2-container .select2-choice,
+.select2-container .select2-choices,
+.select2-container .select2-choices .select2-search-field input {
+	border-color: #000;
+	box-shadow: none;
 }
 
 .select2-container .select2-choice .select2-arrow {
